--- a/style.css
+++ b/style.css
@@ -3,8 +3,21 @@ Cores do Site
 Cinza - #222222
 Preto - #080808
 Laranja - #ff6d00
+Laranja Fraco - #f5910d
 Branco - #ffffff
 */
 body {
     background-color: #222222;
+}
+
+@media only screen and (max-width: 768px) {
+
+    /* apply styles here that will only work up to a screen width of 768p*/
+    header {
+        height: 4rem;
+    }
+
+    .fa-bars {
+        height: 4rem;
+    }
 }
