--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
 /*
 Cores do Site 
 Cinza - #222222
+Cinza Fraco - #D3D3D3
 Preto - #080808
 Laranja - #ff6d00
 Laranja Fraco - #f5910d
 Branco - #ffffff
 */
 body {
-    background-color: #222222;
+    background-color: #1a1a1a;
+}
+
+.monoton-regular {
+    font-family: "Monoton", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.teko-font {
+    font-family: "Teko", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
 @media only screen and (max-width: 768px) {
@@ -19,5 +33,74 @@ body {
 
     .fa-bars {
         height: 4rem;
+    }
+}
+
+@media only screen and (min-width: 769px) {
+
+    /* apply styles here that will only work up to a screen width of 768p*/
+    .fixed-div {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        padding: 10px;
+        border: 1px solid #ccc;
+        box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .fixed-div .item {
+        margin-bottom: 10px;
+    }
+
+    .fixed-div .item:last-child {
+        margin-bottom: 0;
+    }
+
+    header {
+        align-items: center;
+        height: 3rem;
+        padding: 2rem;
+    }
+
+    .fa-bars {
+        scale: 250%;
+    }
+
+    #ola {
+        margin-left: 5rem;
+        padding-top: 3rem;
+        padding-left: 10rem;
+    }
+
+    .ola_1 {
+        font-size: 3rem;
+        color: #D3D3D3;
+        margin-bottom: 1rem;
+    }
+
+    .ola_2 {
+        font-size: 8.5rem;
+        color: #ff6d00;
+    }
+
+    .ola_3 {
+        font-size: 4rem;
+        color: #f5910d;
+        margin-bottom: 1rem;
+    }
+
+    .ola_4 {
+        font-size: 2rem;
+        color: #D3D3D3;
+        margin-bottom: 3rem;
+    }
+
+    .ola_5 {
+        font-size: 2rem;
+        color: #D3D3D3;
+        padding: 1rem;
+        border: 1px solid #ff6d00;
+        border-radius: 1rem;
+        max-width: fit-content;
     }
 }
