--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ body {
         text-decoration: underline;
         color: #ff6d00;
         font-size: 2rem;
+        margin-bottom: 1.2rem;
     }
 
     #skills {
@@ -181,19 +182,16 @@ body {
         display: flex;
     }
 
-    .skills_hard {
-        margin-right: 10rem;
+    .skills_box {
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
-
-    .skills_soft {
-        margin-left: 10rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
     }
 
     .skills_skills {
-        margin: 1rem;
+        margin: 0.2rem;
     }
 
 }
