--- a/style.css
+++ b/style.css
@@ -194,4 +194,14 @@ body {
         margin: 0.2rem;
     }
 
+    #contatos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contatos_text1 {
+        margin: auto;
+    }
+
 }
